--- a/css/style.css
+++ b/css/style.css
@@ -2,15 +2,18 @@
 
 :root{
     --cor-de-fundo:  #EBECEE;
-    --font-principal:  #EB9B00;
-    --font-secundario:  #002F52;
+    --font-amarela:  #EB9B00;
+    --font-azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
     --font-banner:  #FFFFFF;
     --texto:  #000000D9;
-
+    --font-principal: "Poppins"
 
 
 
 }
 body{
     background-color: var(--cor-de-fundo);
+    font-family: var(--font-principal);
+    font-size: 1rem;
+    font-weight: 400;
 }
