--- a/css/carousel.css
+++ b/css/carousel.css
@@ -3,7 +3,7 @@
     background-color: var(--font-banner);
     text-align: center;
     text-transform: uppercase;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     font-weight: 700;
     padding: 1em 0 0.5em 0;
 }
@@ -16,4 +16,52 @@
 .swiper-pagination{
     position: initial;
     margin: .5em 0;
+}
+.card__descricao{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 0.5em;
+}
+.card__botoes{
+    display: flex;
+    justify-content: space-between;
+}
+.botoes{
+    display: flex;
+}
+.card{
+    background: var(--font-banner);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    margin: 1em;
+    padding: 1em;
+}
+.descricao__titulo {
+    color: var(--font-amarela);
+    font-weight: 700;
+    line-height: 24px;
+}
+
+.descricao__titulo-livro {
+    color: var(--font-azul);
+    font-size: 18px;
+    font-weight: 700;
+    margin: 0.5em 0;
+    line-height: 27px;
+}
+
+.descricao__texto {
+    font-size: 14px;
+    line-height: 21px;
+   
+}
+.botoes__item{
+    margin: 0 0.5em;
+}
+.botoes__ancora{
+    background-color: var(--font-amarela);
+    padding: 1em 2.2em;
+    color: var(--font-banner);
+    font-weight: 700;
+    text-decoration: none;
 }
