--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
     --font-amarela:  #EB9B00;
     --font-azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
     --font-banner:  #FFFFFF;
+    --font-azul: #002f52;
     --texto:  #000000D9;
     --font-principal: "Poppins"
 
