--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import url(../css/header.css);
 @import url(../css/banner.css);
 @import url(../css/carousel.css);
+@import url(../css/topicos.css);
 
 :root{
     --cor-de-fundo:  #EBECEE;
