--- a/css/header.css
+++ b/css/header.css
@@ -26,15 +26,17 @@
     position: absolute;
     top: 100%;
     width: 60vw;
- 
+   
 }
 .container__botao:checked~.lista-menu{
     display: block;
+
 }
 .lista-menu__titulo,
 .lista-menu__item{
     padding: 1em;
     background-color: var(--font-banner);
+    z-index: 1;
 }
 .lista-menu__titulo{
     color: var(--font-amarela);
