--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
 @import url(../css/banner.css);
 @import url(../css/carousel.css);
 @import url(../css/topicos.css);
+@import url(../css/contato.css);
+@import url(../css/rodape.css);
 
 :root{
     --cor-de-fundo:  #EBECEE;
