Estilizando o header versão desktop

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,9 @@
     --font-banner:  #FFFFFF;
     --font-azul: #002f52;
     --texto:  #000000D9;
-    --font-principal: "Poppins"
+    --font-principal: "Poppins";
+    --font-secundaria: "Josefin Sans";
+    --preto:  #000000;
 
 
 
