--- a/css/header.css
+++ b/css/header.css
@@ -36,7 +36,7 @@
 .lista-menu__item{
     padding: 1em;
     background-color: var(--font-banner);
-    z-index: 1;
+  
 }
 .lista-menu__titulo{
     color: var(--font-amarela);
@@ -51,6 +51,49 @@
     text-transform: uppercase;
 
 }
-.container__botao{
+.container__botao,
+.container__titulo,
+.opcoes{
     display: none;
 }
+
+
+@media screen and (min-width: 1024px){
+.container__titulo,
+.ontainer__titulo--negrito{
+    font-family: var(--font-secundario);
+    font-size: 2rem;
+}
+
+.container__titulo{
+    font-weight: 400;
+    display: block;
+}
+.container__titulo--negrito{
+    font-weight: 700;
+}
+
+.opcoes{
+    display: flex;
+}
+.opcoes__item{
+padding: 0 1em;
+text-transform: uppercase;
+}
+.opcoes__link{
+    text-decoration: none;
+    color: var(--preto);
+}
+.container__imagem--transparente ,
+.cabecalho__menu-hamburger,
+.opcoes__botao{
+    display: none;
+}
+
+.opcoes__botao:checked~.lista-menu{
+display: block;
+width: auto;
+}
+
+}
+    
