--- a/css/banner.css
+++ b/css/banner.css
@@ -32,3 +32,17 @@
     background-position: 1em;
 
 }
+
+@media screen and (min-width: 1024px){
+    .banner__titulo{
+        font-size: 2.5rem;
+    }
+    .banner__pesquisa{
+        width: 35%;
+    }
+    .banner__pesquisa::placeholder{
+        position: 2em;
+        padding-left: none;
+    }
+        
+    }
