--- a/css/carousel.css
+++ b/css/carousel.css
@@ -65,3 +65,26 @@
     font-weight: 700;
     text-decoration: none;
 }
+
+@media screen and (min-width: 1024px){
+    .carousel__titulo{
+        font-size: 1.8rem;
+    }
+    .swiper-pagination{
+        margin: 2em 0 3em 0;
+    }
+    .swiper{
+        width: 60%;
+    }
+    .swiper-button-prev, .swiper-button-next{
+        display: block;
+        top: 60%;
+
+    }
+   .card{
+    width: 35%;
+    margin: 2em auto;
+   }
+
+   
+}
