--- a/css/contato.css
+++ b/css/contato.css
@@ -29,3 +29,22 @@
    color: var(--font-azul);
     background: url(../img/Email.svg) no-repeat;
 }
+
+@media screen and (min-width: 1024px){
+    .contato{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+       
+    }
+    .contato__descricao{
+        margin-right: 1em;
+        width: 30%;
+    }
+    .contato__email{
+        width: 30%;
+    }
+    .contato__titulo{
+        font-size: 1.5rem;
+    }
+}
