--- a/css/style.css
+++ b/css/style.css
@@ -5,21 +5,24 @@
 @import url(../css/contato.css);
 @import url(../css/rodape.css);
 
-:root{
-    --cor-de-fundo:  #EBECEE;
-    --font-amarela:  #EB9B00;
+:root {
+    --cor-de-fundo: #EBECEE;
+    --font-amarela: #EB9B00;
     --font-azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
-    --font-banner:  #FFFFFF;
+    --font-banner: #FFFFFF;
     --font-azul: #002f52;
-    --texto:  #000000D9;
+    --texto: #000000D9;
     --font-principal: "Poppins";
     --font-secundaria: "Josefin Sans";
-    --preto:  #000000;
+    --preto: #000000;
+    --cinza: #474646;
+    --cinza-claro: #858585
 
 
 
 }
-body{
+
+body {
     background-color: var(--cor-de-fundo);
     font-family: var(--font-principal);
     font-size: 1rem;
