--- a/css/topicos.css
+++ b/css/topicos.css
@@ -25,3 +25,10 @@
     background-color: var(--font-amarela);
     text-decoration: none;
 }
+
+@media screen and (min-width: 1024px) {
+    
+    .topicos__titulo, .topicos__link{
+        font-size: 1.5rem;
+    }
+}
