--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,8 @@
     --font-principal: "Poppins";
     --font-secundaria: "Josefin Sans";
     --preto: #000000;
-    --cinza: #474646;
-    --cinza-claro: #858585
+    --font-cinza: #474646;
+    --font-cinza-claro: #858585;
 
 
 
