--- a/css/banner.css
+++ b/css/banner.css
@@ -38,11 +38,20 @@
         font-size: 2.5rem;
     }
     .banner__pesquisa{
-        width: 35%;
+        width: 50%;
     }
     .banner__pesquisa::placeholder{
         position: 2em;
         padding-left: none;
     }
         
+    }
+
+    @media screen and (min-width: 1366px){
+        .banner__pesquisa{
+            width: 35%;
+        }
+        .banner{
+            padding: 6em 0;
+        }
     }
