--- a/css/carousel.css
+++ b/css/carousel.css
@@ -88,3 +88,26 @@
 
    
 }
+@media screen and (min-width: 1366px){
+    .carousel__container{
+        display: flex;
+        margin: 0 20vw 3em 20vw;
+        text-align: center;
+    }
+    .swiper-pagination{
+        margin: 1em 0;
+    }
+    .swiper{
+        width: 50%;
+    }
+    .card{
+        width: 60%;
+        margin-left: 3em;
+    }
+    .descricao__titulo{
+        font-size: 1.8rem;
+    }
+    .descricao__texto{
+        font-size: 1.2rem;
+    }
+}
